--- a/feed/feed.html
+++ b/feed/feed.html
@@ -34,9 +34,6 @@
 
         <script src="../lib/jquery-1.9.1.js"></script>
         <script src="../lib/underscore-1.4.4.js"></script>
-        <script>
-            window.$j = window.jQuery; //社内の環境にあわせる
-        </script>
-        <script src="feedAnswer.js"></script>
+        <script src="feed.js"></script>
     </body>
 </html>
