--- a/test/stage1/index.html
+++ b/test/stage1/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mocha</title>
+    <title>mixi JS Training</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://img.mixi.net/img/basic/favicon.ico" type="image/vnd.microsoft.icon" rel="icon">
+    <link href="http://img.mixi.net/img/basic/favicon.ico" type="image/vnd.microsoft.icon" rel="shortcut icon">
     <link rel="stylesheet" href="/modules/mocha/mocha.css" />
     <link rel="stylesheet" href="../common/mocha-patch.css" />
     <link rel="stylesheet" href="style.css" />
