--- a/test/stage1/index.html
+++ b/test/stage1/index.html
@@ -40,6 +40,7 @@
       expect = chai.expect;
     </script>
     <script>mocha.setup('bdd')</script>
+    <script src="analytics.js"></script>
     <script src="tests.js"></script>
     <script>
       if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
