--- a/test/index.html
+++ b/test/index.html
@@ -26,11 +26,12 @@
     </div>
     <ol>
       <li><a href="stage1">意図した DOM を取得するトレーニング</a></li>
-      <li><a href="stage2">意図通りに DOM の構造・スタイルを変更するトレーニング</a></li>
-      <li><a href="stage3">意図通りにイベントを利用するトレーニング</a></li>
-      <li><a href="stage4">意図通りにサーバーと通信するトレーニング</a></li>
-      <li><a href="stage5">意図通りにモジュールを実装するトレーニング</a></li>
-      <li><a href="stage6">よくあるイディオムを読み書きするトレーニング</a></li>
+      <li><a href="stage2">意図通りに DOM のスタイルを変更するトレーニング</a></li>
+      <li><a href="stage3">意図通りに DOM の構造を変更するトレーニング</a></li>
+      <li><a href="stage4">意図通りにイベントを利用するトレーニング</a></li>
+      <li><a href="stage5">意図通りにサーバーと通信するトレーニング</a></li>
+      <li><a href="stage6">意図通りにモジュールを実装するトレーニング</a></li>
+      <li><a href="stage7">よくあるイディオムを読み書きするトレーニング</a></li>
     </ol>
   </div>
 </body>
