--- a/test/stage1/index.html
+++ b/test/stage1/index.html
@@ -41,6 +41,9 @@
     </script>
     <script>mocha.setup('bdd')</script>
     <script src="analytics.js"></script>
+    <script>
+      describe.skipWhenPhantomJS = window.mochaPhantomJS ? describe.skip : describe;
+    </script>
     <script src="tests.js"></script>
     <script>
       if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
