--- a/test/stage4/index.html
+++ b/test/stage4/index.html
@@ -16,7 +16,7 @@
       <li id="firebrick">1</li>
       <li id="chocolate">2</li>
       <li class="mediumseagreen">3</li>
-      <li class="turquoise"><input type="number" value="0"></li>
+      <li class="turquoise">4<input type="number" value="0"></li>
     </ul>
   </div>
   <div id="mocha"></div>
@@ -35,5 +35,11 @@
     if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
     else { mocha.run(); }
   </script>
+  <script src="/api/heavy"></script>
+  <div class="js-training-container">
+    <ul class="js-training">
+      <li class="steelblue">5 &#x1f433;</li>
+    </ul>
+  </div>
 </body>
 </html>
