Switch to bower from npm

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mixi JS Training</title>
-  <link rel="stylesheet" href="modules/bootstrap/dist/css/bootstrap.css" media="all">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" media="all">
+  <link rel="stylesheet" href="/bower_components/github-fork-ribbon-css/gh-fork-ribbon.css" />
   <style>
     .github-fork-ribbon {
       background-color: #f80;
