--- a/public/stage3/index.html
+++ b/public/stage3/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="http://img.mixi.net/img/basic/favicon.ico" type="image/vnd.microsoft.icon" rel="icon">
   <link href="http://img.mixi.net/img/basic/favicon.ico" type="image/vnd.microsoft.icon" rel="shortcut icon">
-  <link rel="stylesheet" href="/modules/mocha/mocha.css">
-  <link rel="stylesheet" href="../common/mocha-patch.css">
+  <link rel="stylesheet" href="/bower_components/mocha/mocha.css">
+  <link rel="stylesheet" href="/common/mocha-patch.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,10 +32,10 @@
   <div class="js-training-trick">&#x1f420;&#x1f420;</div>
   </div>
   <div id="mocha"></div>
-  <script src="/modules/jquery/dist/jquery.js"></script>
-  <script src="/modules/mocha/mocha.js"></script>
-  <script src="/modules/chai/chai.js"></script>
-  <script src="/modules/chai-jquery/chai-jquery.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/bower_components/mocha/mocha.js"></script>
+  <script src="/bower_components/chai/chai.js"></script>
+  <script src="/bower_components/chai-jquery/chai-jquery.js"></script>
   <script>
     mocha.ui('bdd');
     mocha.reporter('html');
