--- a/public/stage5/index.html
+++ b/public/stage5/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="http://img.mixi.net/img/basic/favicon.ico" type="image/vnd.microsoft.icon" rel="icon">
   <link href="http://img.mixi.net/img/basic/favicon.ico" type="image/vnd.microsoft.icon" rel="shortcut icon">
-  <link rel="stylesheet" href="/bower_components/mocha/mocha.css">
-  <link rel="stylesheet" href="/common/mocha-patch.css">
+  <link rel="stylesheet" href="/bower_components/mocha/mocha.css" media="all">
+  <link rel="stylesheet" href="/common/mocha-patch.css" media="all">
+  <link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
   <div id="mocha"></div>
@@ -16,7 +17,7 @@
   <script src="/bower_components/chai/chai.js"></script>
   <script src="/bower_components/chai-jquery/chai-jquery.js"></script>
   <script src="/bower_components/chai-as-promised/lib/chai-as-promised.js"></script>
-  <script src="/bower_components/whatwg-fetch/fetch.js"></script>
+  <script src="/bower_components/fetch/fetch.js"></script>
   <script>
     mocha.ui('bdd');
     mocha.reporter('html');
