--- a/public/stage6/index.html
+++ b/public/stage6/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="js-training-playground">
-    <button class="button button-3d-caution button-circle js-training-button">Push</button>
+    <button class="button button-caution button-3d button-pill button-giant js-training-button">Push</button>
   </div>
   <div id="mocha"></div>
   <script src="/bower_components/jquery/dist/jquery.js"></script>
