--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
       </div>
     </div>
     <ol>
-      <li><a href="stage1">意図した DOM 要素を取得するトレーニング</a></li>
-      <li><a href="stage2">意図通りに DOM 要素のスタイルを変更するトレーニング</a></li>
-      <li><a href="stage3">意図通りに DOM の構造を変更するトレーニング</a></li>
-      <li><a href="stage4">意図通りに DOM イベントを利用するトレーニング</a></li>
-      <li><a href="stage5">意図通りにサーバーと通信するトレーニング</a></li>
-      <li><a href="stage6">意図通りにモジュールを実装するトレーニング</a></li>
+      <li><a href="stage1">DOM 要素を取得するトレーニング</a></li>
+      <li><a href="stage2">DOM 要素のスタイルを変更するトレーニング</a></li>
+      <li><a href="stage3">DOM の構造を変更するトレーニング</a></li>
+      <li><a href="stage4">DOM イベントを利用するトレーニング</a></li>
+      <li><a href="stage5">サーバーと通信するトレーニング</a></li>
+      <li><a href="stage6">モジュールを実装するトレーニング</a></li>
       <li><a href="stage7">よくあるイディオムを読み書きするトレーニング</a></li>
     </ol>
   </div>
