--- a/public/stage6/index.html
+++ b/public/stage6/index.html
@@ -6,15 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="http://img.mixi.net/img/basic/favicon.ico" type="image/vnd.microsoft.icon" rel="icon">
   <link href="http://img.mixi.net/img/basic/favicon.ico" type="image/vnd.microsoft.icon" rel="shortcut icon">
-  <link rel="stylesheet" href="/bower_components/Buttons/css/buttons.css" media="all">
   <link rel="stylesheet" href="/bower_components/mocha/mocha.css" media="all">
   <link rel="stylesheet" href="/common/mocha-patch.css" media="all">
   <link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
-  <div class="js-training-playground">
-    <button class="button button-caution button-3d button-pill button-giant js-training-button">Push</button>
-  </div>
+  <a href="sample" class="js-training-sample-link">サンプルパッケージ</a>
   <div id="mocha"></div>
   <script src="/bower_components/jquery/dist/jquery.js"></script>
   <script src="/bower_components/mocha/mocha.js"></script>
