--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
       <li><a href="stage2">DOM 要素のスタイルを変更するトレーニング</a></li>
       <li><a href="stage3">DOM の構造を変更するトレーニング</a></li>
       <li><a href="stage4">DOM イベントを利用するトレーニング</a></li>
-      <li><a href="stage5">サーバーと通信するトレーニング</a></li>
+      <li><a href="stage5">非同期処理を書くトレーニング</a></li>
       <li><a href="stage6">モジュールを実装するトレーニング</a></li>
-      <li><a href="stage7">よくあるイディオムを読み書きするトレーニング</a></li>
+      <li><a href="stage7">よくあるイディオムを読むトレーニング</a></li>
     </ol>
   </div>
 </body>
