Fix issues found by review

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </div>
     <ol>
       <li><a href="stage1">DOM 要素を取得するトレーニング</a></li>
-      <li><a href="stage2">DOM 要素のスタイルを変更するトレーニング</a></li>
+      <li><a href="stage2">DOM 要素の属性・テキストを変更するトレーニング</a></li>
       <li><a href="stage3">DOM の構造を変更するトレーニング</a></li>
       <li><a href="stage4">DOM イベントを利用するトレーニング</a></li>
       <li><a href="stage5">非同期処理を書くトレーニング</a></li>
